--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-icons": "^1.8.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "helmet": "^5.0.2",
